<resources>
    <string name="app_name">Lista Figur</string>
    <string name="activity_main_panel_shape">Figura</string>
    <string name="activity_main_panel_area">Pole</string>
    <string name="activity_main_panel_feature">Cecha</string>
    <string name="list_item_shape_icon_description">image depicts shape</string>
    <string name="menu_settings_title">Ustawienia</string>
    <string name="menu_statistics_title">Statystyka</string>
    <string name="menu_delete_all_title">Usuń wszystkie</string>
    <string name="menu_context_delete_title">Usuń</string>
    <string name="menu_context_duplicate_title">Duplikuj</string>
    <string name="prefs_settings_count_key">shapesCount</string>
    <string name="prefs_settings_count_title"><font color="#ffffff">Liczba kształtów</font></string>
    <string name="prefs_settings_count_dialog_title"><font color="#000000">Liczba kształtów</font></string>
    <string name="prefs_settings_min_length_key">minSideLenght</string>
    <string name="prefs_settings_max_length_key">maxSideLenght</string>
    <string name="prefs_settings_min_length_title"><font color="#ffffff">Minimalna długość boku</font></string>
    <string name="prefs_settings_min_length_dialog_title"><font color="#000000">Minimalna długość boku</font></string>
    <string name="prefs_settings_max_length_title"><font color="#ffffff">Maksymalna długość boku</font></string>
    <string name="prefs_settings_max_length_dialog_title"><font color="#000000">Maksymalna długość boku</font></string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="menu_refresh_title">Refresh</string>
    <string name="menu_add_title">Add random</string>
    <string name="statistics_iv_square_column_description">image represents square column</string>
    <string name="statistics_iv_circle_column_description">image represents circle column</string>
    <string name="statistics_iv_triangle_column_description">image represents triangle column</string>
    <string name="statistics_shapes_count_label">Liczba figur:</string>
    <string name="statistics_shapes_area_sum_label">Suma pól:</string>
    <string name="statistics_shapes_feature_sum_label">Suma cechy:</string>
    <string name="settings_fragment_wrong_argument_message">Minimalna długośc boku musi być mniejsza od maksymalnej</string>
</resources>
