<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:gravity="left"
        android:defaultValue="10"
        android:key="@string/prefs_settings_count_key"
        android:inputType="number"
        android:digits="0123456789"
        android:singleLine="true"
        android:dialogTitle="@string/prefs_settings_count_dialog_title"
        android:title="@string/prefs_settings_count_title"/>

    <EditTextPreference
        android:gravity="left"
        android:defaultValue="0"
        android:inputType="numberDecimal"
        android:key="@string/prefs_settings_min_length_key"
        android:numeric="decimal|signed"
        android:singleLine="true"
        android:dialogTitle="@string/prefs_settings_min_length_dialog_title"
        android:title="@string/prefs_settings_min_length_title"/>

    <EditTextPreference
        android:gravity="left"
        android:defaultValue="1"
        android:inputType="numberDecimal"
        android:key="@string/prefs_settings_max_length_key"
        android:numeric="decimal|signed"
        android:singleLine="true"
        android:dialogTitle="@string/prefs_settings_max_length_dialog_title"
        android:title="@string/prefs_settings_max_length_title"/>

</PreferenceScreen>