<?xml version="1.0" encoding="utf-8"?>
<tools:menu xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            tools:context=".MainActivity">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_refresh_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings_title"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_statistics"
        android:title="@string/menu_statistics_title"
        app:showAsAction="never"
        />
</tools:menu>