<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_statistics_segment_height"
        android:orientation="horizontal"
        android:weightSum="4">

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/statistics_iv_square_column_description"
            android:scaleType="fitCenter"
            android:src="@drawable/square"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/statistics_iv_triangle_column_description"
            android:scaleType="fitCenter"
            android:src="@drawable/triangle"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/statistics_iv_circle_column_description"
            android:scaleType="fitCenter"
            android:src="@drawable/circle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_statistics_segment_height"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/statistics_shapes_count_label"/>

        <TextView
            android:id="@+id/tv_statistics_square_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_statistics_triangle_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_statistics_circle_count"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_statistics_segment_height"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/statistics_shapes_area_sum_label"/>

        <TextView
            android:id="@+id/tv_statistics_square_area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_statistics_triangle_area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_statistics_circle_area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_statistics_segment_height"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/statistics_shapes_feature_sum_label"/>

        <TextView
            android:id="@+id/tv_statistics_square_feature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_statistics_triangle_feature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_statistics_circle_feature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
