<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_property_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_shape_indicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_main_panel_field_height"
                android:gravity="center"
                android:text="@string/activity_main_panel_shape"
                android:textColor="@color/colorText"/>

            <ImageView
                android:id="@+id/iv_shape_sort_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_expand_more_white_36dp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_area_indicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_main_panel_field_height"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/activity_main_panel_area"
                android:textColor="@color/colorText"/>

            <ImageView
                android:id="@+id/iv_area_sort_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_expand_more_white_36dp"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_feature_indicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/activity_main_panel_field_height"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/activity_main_panel_feature"
                android:textColor="@color/colorText"/>

            <ImageView
                android:id="@+id/iv_feature_sort_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_expand_more_white_36dp"
                android:visibility="gone"/>
        </LinearLayout>


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shape_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>